feat: add SecurityConfig and SecurityFilter for authentication setup